# CIMPLC-Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  IDF-VSCode.lnk  README.md  sdkconfig  sdkconfig.ok
.github/workflows/: c-cpp.yml  cmake.yml
Firmware/: .gitignore  CMakeLists.txt  partitionMap.csv  sdkconfig  sdkconfig.old
Firmware/RecoveryFirmware/: CMakeLists.txt  partitionMap.csv  sdkconfig  sdkconfig.old  sdkconfig.stripped
Firmware/RecoveryFirmware/main/: CMakeLists.txt  main.cpp  upload.html
Firmware/main/: CMakeLists.txt  main.cpp
Firmware/main/init/: commonComponents.hpp  replInit.hpp  serialInit.cpp  serialInit.hpp
Firmware/main/interface/: main.html  upload.html
Firmware/main/modules/: REPL.cpp  REPL.hpp  eeprom.cpp  eeprom.hpp  filesystem.cpp  filesystem.hpp  gps.cpp  gps.hpp  http.cpp  http.hpp  networking.cpp  networking.hpp  twai.cpp  twai.hpp
PCB/: #auto_saved_files#  CanXCIEVER.kicad_sch  EEPROM.kicad_sch  IO_Block.kicad_sch  IO_Block_1.kicad_sch  I_Block.kicad_sch  PLC-CIM.kicad_pcb  PLC-CIM.kicad_pro  PLC-CIM.kicad_sch  PM.kicad_sch  RS232.kicad_sch  RS485.kicad_sch  RTC.kicad_sch  fp-lib-table  lp_uart_block.kicad_sch  remoteIOBlock.kicad_sch  sym-lib-table
PCB/Input/opampin/: opampin.kicad_pro
PCB/gerber/: PLC-CIM-B_Mask.gbr  PLC-CIM-B_Paste.gbr  PLC-CIM-B_Silkscreen.gbr  PLC-CIM-Back.gbr  PLC-CIM-Edge_Cuts.gbr  PLC-CIM-F_Mask.gbr  PLC-CIM-F_Paste.gbr  PLC-CIM-F_Silkscreen.gbr  PLC-CIM-Front.gbr  PLC-CIM-In1_Cu.gbr  PLC-CIM-In2_Cu.gbr  PLC-CIM-NPTH.drl  PLC-CIM-PTH.drl  PLC-CIM-job.gbrjob
PCB/lib/: logoRSP.kicad_sym  logoUPB.kicad_sym
PCB/lib/12103C104KAT2A/: 12103C104KAT2A.dcm  12103C104KAT2A.kicad_sym  CAPC3325X94N.kicad_mod
PCB/lib/750678-1/: 750678-1.dcm  750678-1.kicad_sym  7506781.kicad_mod
PCB/lib/865060640001/: 865060640001.dcm  (+2 more)
RecoveryFirmware/: partitionMap.csv  sdkconfig  sdkconfig.old
RecoveryFirmware/main/: CMakeLists.txt  main.cpp  upload.html
main/: CMakeLists.txt  main.cpp
main/init/: commonComponents.hpp
main/interface/: main.html
main/modules/: IOController.cpp  IOController.hpp  REPL.cpp  REPL.hpp  filesystem.cpp  filesystem.hpp  networking.cpp  networking.hpp  twai.cpp  twai.hpp  uart.cpp
main/modules/wasm/: CMakeLists.txt  sdkconfig
main/modules/wasm/main/: CMakeLists.txt  main.cpp
main/modules/wasm/main/include/: upload.h  wasm.hpp
main/modules/wasm/main/wasm3/: .gitignore  README.md
(+412 files in other folders)
